# volume_rendering_practice

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: index_buffer.h  libs.h  macros.h  renderer.h  shader.h  utils.h  vertex_buffer.h  vertex_buffer_layout.h
include/custom/: frame_buffer.h  renderer.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
resource/shaders/: Basic.shader  HelloWorld.shader  RayTrace.glsl  RayTrace.shader  face.shader  raycast.shader  raycast2.shader  raycast_gray.shader  raycast_tff.shader
src/: index_buffer.cpp  main.cpp  renderer.cpp  shader.cpp  utils.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
src/custom/: frame_buffer.cpp  index_buffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
